new-wake-on-traffic-automation/k8s/traffic-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-green-traffic-waker
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-green-traffic-waker
  template:
    metadata:
      labels:
        app: kube-green-traffic-waker
    spec:
      serviceAccountName: kube-green-traffic-waker
      containers:
        - name: controller
          image: imksprateek/kube-green-traffic-waker:latest
          imagePullPolicy: Always
